--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </div>
         <div class="card-body">
           <div class="d-grid gap-2 col-6 mx-auto">
-            <button id="Button" class="btn btn-danger">Change color</button>
+            <button id="Button" class="btn btn-danger" onclick="changeColor()">Change color</button>
           </div>
         </div>
       </div>
